# spellcaster

./: LICENSE_HARDWARE  LICENSE_SOFTWARE  README.md
3dprint/: spellcaster case v38.f3d  spellcaster case v45.f3d  spellcaster case.f3d  spellcaster case.step  spellcaster-pcb.step
code/samples/ble-bthome/: CMakeLists.txt  Kconfig  README.md  prj.conf
code/samples/ble-dump/: CMakeLists.txt  ble-dump.code-workspace  prj.conf
code/samples/ble-hid/: CMakeLists.txt  Kconfig  prj.conf
code/samples/blinky/: CMakeLists.txt  prj.conf
code/samples/caster-test/: CMakeLists.txt  prj.conf
code/samples/caster-test/src/: main.c
code/samples/check/: CMakeLists.txt  prj.conf
code/samples/zigbee/: CMakeLists.txt  Kconfig  prj.conf  zigbee.code-workspace
code/samples/zigbee/src/: factory_reset.c  factory_reset.h  main.c  zb_sc_defs.h
code/samples/zigbee/zha/quirks/: spellcaster.py
code/sclib/: CMakeLists.txt  Kconfig
code/sclib/boards/arm/spellcaster_nrf52833/: Kconfig  Kconfig.board  Kconfig.defconfig  spellcaster_nrf52833-pinctrl.dtsi  spellcaster_nrf52833.dts  spellcaster_nrf52833_0_0_0.conf  spellcaster_nrf52833_0_0_0.overlay  spellcaster_nrf52833_0_0_1.conf  spellcaster_nrf52833_0_0_1.overlay  spellcaster_nrf52833_defconfig
code/sclib/include/sclib/: accel.h  adc.h  button.h  caster.h  dtw.h  flash_fs.h  led.h  lsm6dsl_regs.h  macros.h  motion_detector.h  mpu6050_regs.h  sensors.h  shtc3.h  signal_store.h  vibration.h
code/sclib/src/: accel.c  adc.c  button.c  caster.c  dtw.c  flash_fs.c  led.c  motion_detector.c  sensors.c  shtc3.c  signal_store.c  vibration.c
data/: accel.ipynb  accel_ble-dump-rot-inv.ipynb  accel_ble-dump.ipynb
kicad/: spellcaster-top-pos.csv  spellcaster.csv  spellcaster.kicad_pcb  spellcaster.kicad_pro  spellcaster.kicad_sch
kicad/gerber/: spellcaster-B_Cu.gbl  spellcaster-B_Mask.gbs  spellcaster-B_Paste.gbp  spellcaster-B_Silkscreen.gbo  spellcaster-Edge_Cuts.gm1  spellcaster-F_Cu.gtl  spellcaster-F_Mask.gts  spellcaster-F_Paste.gtp  spellcaster-F_Silkscreen.gto  spellcaster-In1_Cu (GND).g2  spellcaster-In2_Cu (VCC).g3  spellcaster.drl
(+47 files in other folders)
